@@ -88,7 +88,7 @@ exports.Minify = {
      */
     setAllowed              :(function(pAllowed){
        if(pAllowed){
-           this._allowed=pAllowed;           
+           this._allowed = pAllowed;           
        }
     }),
         
@@ -105,9 +105,12 @@ exports.Minify = {
                     lMinify      = require('minify');
                 }catch(pError){
                     this._allowed = {js:false,css:false,html:false};
-                    return console.log('You coud install minify '   +
+                    
+                    console.log('You coud install minify '   +
                         'for better download spead:\n'              +
                         'npm i minify');
+                    
+                    return this._allowed;
                 }
                 
                 /*
@@ -143,6 +146,8 @@ exports.Minify = {
                     lMinify.optimize(lOptimizeParams);
                         
                 this.Cache = lMinify.Cache;
+                
+                return this._allowed;
         }
     }),
     
